fix bingo wrap

--- a/src/shared/styles/_bingo.scss
+++ b/src/shared/styles/_bingo.scss
@@ -15,6 +15,7 @@
   display:flex;
   flex-direction: row;
   align-items: center;
+  overflow: hidden;
   &.tile-selected{
     background: orange;
     color: white;
